# shapegraphs

./: README.md  __init__.py  frame2sg.py  pyproject.toml  visualize.py
readers/: __init__.py  bassek.py
